@@ -240,6 +240,8 @@ frontends/php/include/views/administration.general.housekeeper.edit.php -text
 frontends/php/include/views/administration.general.other.edit.php -text
 frontends/php/include/views/administration.general.regularexpressions.edit.php -text
 frontends/php/include/views/administration.general.regularexpressions.list.php -text
+frontends/php/include/views/administration.general.valuemapping.edit.php -text
+frontends/php/include/views/administration.general.valuemapping.list.php -text
 frontends/php/include/views/administration.general.workingtime.edit.php -text
 frontends/php/locale/cs/LC_MESSAGES/frontend.po -text
 frontends/php/locale/de/LC_MESSAGES/frontend.po -text
