@@ -34,7 +34,7 @@
 			AUDIT_RESOURCE_HOST_GROUP => S_HOST_GROUP,
 			AUDIT_RESOURCE_ITEM => S_ITEM,
 			AUDIT_RESOURCE_IMAGE => S_IMAGE,
-			AUDIT_RESOURCE_VALUE_MAP => S_VALUE_MAP,
+			AUDIT_RESOURCE_VALUE_MAP => _('Value map'),
 			AUDIT_RESOURCE_IT_SERVICE => S_IT_SERVICE,
 			AUDIT_RESOURCE_MAP => S_MAP,
 			AUDIT_RESOURCE_SCREEN => S_SCREEN,
