@@ -21,13 +21,13 @@
 <?php
 class CTextBox extends CInput{
 	private $caption;
-	public function __construct($name='textbox',$value='',$size=20,$readonly='no'){
+	public function __construct($name='textbox', $value='', $size=20, $readonly='no', $maxlength=255){
 		parent::__construct('text', $name, $value);
 		$this->setReadonly($readonly);
 		$this->caption = null;
 		$this->tag_body_start = '';
 		$this->setAttribute('size', $size);
-		$this->setAttribute('maxlength', '255');
+		$this->setAttribute('maxlength', $maxlength);
 	}
 }
 ?>
