@@ -350,11 +350,6 @@
 	'S_VALUE_MAP_DELETED'=>				_('Value map deleted'),
 	'S_CANNNOT_DELETE_VALUE_MAP'=>			_('Cannot delete value map'),
 	'S_VALUE_MAP_UPDATED'=>				_('Value map updated'),
-	'S_VALUE_MAPPING_BIG'=>				_('VALUE MAPPING'),
-	'S_VALUE_MAP'=>					_('Value map'),
-	'S_MAPPING'=>					_('Mapping'),
-	'S_NEW_MAPPING'=>				_('New mapping'),
-	'S_NO_MAPPING_DEFINED'=>			_('No mapping defined.'),
 	'S_CONFIGURATION_OF_ZABBIX'=>			_('Configuration of Zabbix'),
 	'S_CONFIGURATION_OF_ZABBIX_BIG'=>		_('CONFIGURATION OF ZABBIX'),
 	'S_CONFIGURATION_UPDATED'=>			_('Configuration updated'),
